--- a/example_01/react-create-element.html
+++ b/example_01/react-create-element.html
@@ -9,6 +9,27 @@
 <body>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <div id="root"></div>
+    <script>
 
+        const postItem = React.createElement(
+            'div',
+            {
+                className: 'practice-reactjs'
+            },
+            React.createElement(
+                'h2',
+                {
+                    title: 'Practice Reactjs'
+                },
+                'Hoc Reactjs'
+            ),
+            React.createElement('p', {}, 'Hoc Reactjs co ban')
+        )
+
+        const root = document.getElementById('root')
+        ReactDOM.render(postItem, root)
+
+    </script>
 </body>
 </html>
