--- a/example_01/work-with-jsx.html
+++ b/example_01/work-with-jsx.html
@@ -34,13 +34,11 @@
         
         function App(){
             
+            let firstAccess = true
+
             return (
                 <div id="wrapper">
-                    <Button
-                    title ="Click me!"
-                    //href="https://www.google.com"
-                    onClick={() => console.log(Math.random())}     
-                    />
+                    {firstAccess && 'Get paid by your work!'}        
                 </div>
             )
         }
