--- a/example_01/work-with-jsx.html
+++ b/example_01/work-with-jsx.html
@@ -13,10 +13,10 @@
     <div id="root"></div>
     <script type="text/babel">
         
-        function List({data}){
+        function List({data, children}){
             return (
                 <ul>
-                    {data.map(item => <li key={item}>{item}</li>)}
+                    {data.map(item => children(item))}
                 </ul>
             )
         }
@@ -27,7 +27,9 @@
 
             return (
                 <div id="wrapper">
-                    <List data={cars} />     
+                    <List data={cars}>
+                        {(item) => <li key={item}>{item}</li>}    
+                    </List>
                 </div>
             )
         }
