work with jsx 11

--- a/example_01/work-with-jsx.html
+++ b/example_01/work-with-jsx.html
@@ -16,7 +16,7 @@
         function List({data, children}){
             return (
                 <ul>
-                    {data.map((...props) => children(...props))}
+                    {data.map(children)}
                 </ul>
             )
         }
