module js ES6, continue 4

--- a/js_es6/index.html
+++ b/js_es6/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>module trong js ES6</h1>
+    <h1>Module trong js ES6</h1>
     <script type="module" src="./app.js"></script>
 </body>
 </html>
